# design-patterns-in-cpp

./: README.md
singleton/: CMakeLists.txt  README.md  main.cpp
singleton/inc/: singleton.h
singleton/src/: singleton.cpp
